--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.2
-  http:
+  http: null
+  provider: ^4.3.3
+  shared_preferences: ^0.5.12+4
   velocity_x: ^1.3.1
 
 dev_dependencies:
