--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  dio: ^3.0.10
   google_fonts: ^1.1.2
   http: null
+  image_picker: ^0.6.7+22
   provider: ^4.3.3
   shared_preferences: ^0.5.12+4
   velocity_x: ^1.3.1
