--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: null
   image_picker: ^0.6.7+22
   provider: ^4.3.3
+  qr_flutter: ^3.2.0
   shared_preferences: ^0.5.12+4
   velocity_x: ^1.3.1
 
